--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
 deploy:
   provider: heroku
   api-key: 
-    secure: $19c5ec43-7fba-44ff-96de-a49c01c87a2c
+    secure: $HEROKU_API_KEY
   app: devops-lab-costa
